# HoscIsland

./: .gitignore  CHANGELOG.md  Package.swift  README.md  build.sh
.github/workflows/: release.yml
LinuxIsland/: ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md
LinuxIsland/data/: style.css
LinuxIsland/src/: autostart.rs  geometry.rs  i18n.rs  interaction.rs  main.rs  model.rs  pomodoro.rs  settings.rs  shelf.rs
LinuxIsland/src/services/: battery.rs  calendar.rs  clipboard.rs  devices.rs  devices_battery.rs  downloads.rs  gmail.rs  hud.rs  lyrics.rs  mod.rs  mpris.rs  notifications.rs  screenshots.rs  volume.rs  weather.rs  windows.rs
LinuxIsland/src/ui/: clipboard.rs  devices.rs  downloads.rs  gmail.rs  island.rs  mod.rs  notifications.rs  settings_window.rs  shelf.rs  windows.rs
Sources/HoscIsland/: BatteryMonitor.swift  CalendarManager.swift  ClipboardManager.swift  DeviceBatteryManager.swift  DownloadsManager.swift  GmailManager.swift  KeychainHelper.swift  Localization.swift  LoginItem.swift  LyricsManager.swift  NotchController.swift  NotchGeometry.swift  NotchInteractionMonitor.swift  NotchModels.swift  NotchView.swift  NotificationWatcher.swift  NowPlayingManager.swift  Pomodoro.swift  ScreenshotWatcher.swift  Settings.swift  SettingsView.swift  ShelfStore.swift  SystemMonitor.swift  WeatherManager.swift  WindowsManager.swift  main.swift
