[package]
name = "linux-island"
version = "0.1.0"
edition = "2021"
description = "Top-center always-on-top island for Wayland (wlroots) — Linux take on HoscIsland"
license = "MIT"

[dependencies]
# GTK4 UI. Requires system GTK >= 4.12 (for CssProvider::load_from_string).
gtk = { package = "gtk4", version = "0.8", features = ["v4_12"] }
# wlr-layer-shell binding: anchors the window to the top edge as an overlay.
gtk4-layer-shell = "0.3"

# System integration.
zbus = "4"               # MPRIS + freedesktop notifications (D-Bus)
async-channel = "2"
futures-util = "0.3"
notify = "6"             # inotify screenshot watching

# Settings persistence (TOML).
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[[bin]]
name = "linux-island"
path = "src/main.rs"
